@@ -1,5 +1,10 @@
 2013-05-19  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
+	* src/qt4/action_sequence_selector.cpp:
+	* src/qt4/action_sequence_selector.h:
+	* src/qt4/debug_message_window.cpp:
+	- 行動列の長さでフィルタする機能を追加
+
 	* src/model/debug_log_data.h:
 	* src/qt4/action_sequence_selector.cpp:
 	* src/qt4/debug_message_window.cpp:
